--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GoatJam_2023.sln"
+    "dotnet.defaultSolution": "Arena51.sln"
 }
